tests/golden/error/expect_type_wrong_arity.tg
// Golden test: expect_type with wrong arity should error.

fn test_wrong_arity() -> Unit {
    expect_type(42);
    ()
}

pub fn main() -> Nat { 0 }
